<resources>
    <string name="app_name">Pay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="payment">Payment</string>
    <string name="transaction_history">Transaction History</string>
    <string name="delete">Delete</string>
    <string name="amount">Amount</string>
    <string name="card_number">Card Number</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="cvv">CVV</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="mm_yy">MM/YY</string>
    <string name="remarks">Remarks</string>
    <string name="proceed">Proceed</string>
    <string name="payment_processing">Payment Processing</string>
    <string name="your_transaction_has_been_completed">Your transaction has been completed</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="date">Date</string>
    <string name="done">Done</string>
    <string name="download_receipt">Download Receipt</string>
    <string name="tick">✓</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="payment_details">Payment Details</string>
    <string name="please_wait">Please wait…</string>
    <string name="print_receipt">Print Receipt</string>
    <string name="welcome_to_home">Welcome to Home</string>
    <string name="transaction_summary">Transaction Summary</string>
    <string name="total_transactions">Total Transactions</string>
    <string name="diagonalrightarrow">↗</string>
    <string name="total_amount">Total Amount</string>
    <string name="today_s_transactions">Today\'s Transactions</string>
    <string name="rs">Rs</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="today_s_amount">Today\'s Amount</string>
    <string name="clockicon">◷</string>
    <string name="view_all_transactions">View All Transactions</string>
    <string name="Rs">Rs</string>
    <string name="enter_amount">Enter amount</string>
    <string name="_1234_5678_9012_3456">1234 5678 9012 3456</string>
    <string name="name_on_card">Name on card</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="time">TIME</string>
    <string name="payment_information">Payment Information</string>

</resources>