<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
<LinearLayout



    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    tools:context=".PaymentFormFragment">




    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/payment_details"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <!--    amount-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textSize="20sp"

        />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="number"
        android:imeOptions= "actionNext"
        android:maxLength="16"

        tools:ignore="LabelFor" />

    <!--    for card num-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_number"
        android:textSize="20sp"

        />
    <EditText
        android:id="@+id/etCardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="16"
        android:imeOptions= "actionNext"
        tools:ignore="LabelFor" />

    <!--for card name-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_holder_name"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/etCardHolderName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:maxLength="35"
        android:imeOptions= "actionNext"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <!--    for cvv-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cvv"
        android:textSize="20sp"

        />

    <EditText
        android:id="@+id/etCvv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="3"
        android:imeOptions= "actionNext"
        tools:ignore="LabelFor" />



    <!--    expiry-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expiry_date"
        android:textSize="20sp"

        />

    <EditText
        android:id="@+id/etExpiryDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:hint="@string/mm_yy"
        android:importantForAutofill="no"
        android:inputType="datetime"
        android:maxLength="5"
        android:imeOptions= "actionNext"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remarks"
        android:textSize="20sp"

        />

    <EditText
        android:id="@+id/etRemarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text"

        android:imeOptions= "actionDone"

        />

    <ProgressBar
        android:id="@+id/paymentProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/tvPaymentProcessing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_processing"
        android:visibility="gone"

        />

    <Button
        android:id="@+id/btnProceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/proceed" />


</LinearLayout>
    </ScrollView>


